--- a/MyTutor-Nepal-Frontend/index.html
+++ b/MyTutor-Nepal-Frontend/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -13,5 +13,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAK54r59Aki4jTcevnW0_nVw7B5YURWqhQ&libraries=places"></script>
   </body>
 </html>
