--- a/MyTutor-Nepal-Frontend/index.html
+++ b/MyTutor-Nepal-Frontend/index.html
@@ -16,7 +16,10 @@
       href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;500;600&display=swap"
       rel="stylesheet"
     />
-    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.45.0/mapbox-gl.css' rel='stylesheet' />.
+    <link
+      href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.45.0/mapbox-gl.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
