--- a/MyTutor-Nepal-Frontend/index.html
+++ b/MyTutor-Nepal-Frontend/index.html
@@ -13,6 +13,10 @@
     />
     <title>MyTutor Nepal</title>
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;500;600&display=swap"
       rel="stylesheet"
     />
